--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dylan Cutler",
   "license": "ISC",
   "dependencies": {
     "rxjs": "^6.6.2",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
