--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Dylan Cutler",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.6.4",
     "rxjs": "^6.6.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
